fix: services card text alignment fixed

--- a/src/components/service/service.css
+++ b/src/components/service/service.css
@@ -22,6 +22,7 @@
     line-height: 29px;
     margin: 0.4rem 0;
     color: #7b3fbb;
+    text-align: center;
     
 }
 
